[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "plushugh",email = "plushugh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "elevenlabs[pyaudio] (<=1.54.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
